# pycounts_kg

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_kg/: __init__.py
tests/: test_pycounts_kg.py
